force-app/main/default/objects/My_Application__c/My_Application__c.object-meta.xml
<CustomObject>
    <label>My Application</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>My Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>