force-app/main/default/objects/My_Application__c/fields/Check_Field1__c.field-meta.xml
<CustomField>
    <fullName>Check_Field1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Field1</label>
    <type>Checkbox</type>
</CustomField>