force-app/main/default/objects/My_Application__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>