force-app/main/default/objects/My_Application__c/fields/Test_Form_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Form_Field__c</fullName>
    <formula>IF(ISBLANK( OwnerId ), &quot;Correct&quot;, &quot;Wrong&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Form Field</label>
    <type>Text</type>
</CustomField>