force-app/main/default/objects/My_Application__c/validationRules/Test_Valid_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Valid_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Test_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Test_Date__c</errorDisplayField>
    <errorMessage>Date cannot be less than today.</errorMessage>
</ValidationRule>